Show ajax errors in dictionaries

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
@@ -107,6 +107,10 @@
     .pagination {
         margin: 1rem 3px 0 !important;
     }
+    
+    &:empty {
+        margin-bottom: 0;
+    }
 }
 
 .dictionary-result-word-search-description {
