Revert "Set a list of dictionaries as default link for section dictionary"
This reverts commit 949d8a1172442dd9957180f0489730d77c2d3068.

--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/Menu/_PortalMenuResearch.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/Menu/_PortalMenuResearch.cshtml
@@ -7,7 +7,7 @@
     <div id="main-plugins-menu" class="main-plugins-menu">
         <ul>
             <li id="dictionaries-menu" class="has-sub">
-                <a href='@Url.Action("List", "Dictionaries", new {area = "Dictionaries"})'>
+                <a href='@Url.Action("Search", "Dictionaries", new {area = "Dictionaries"})'>
                     <span>@Localizer.Translate("Dictionaries", "layout")</span>
                 </a>
                 <ul>
