Disable Search headword row button when error

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Dictionaries/Views/Dictionaries/Listing.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Dictionaries/Views/Dictionaries/Listing.cshtml
@@ -31,7 +31,7 @@
                             </button>
                         </div>
                         <div class="searchbar-buttons">
-                            <button id="searchButton" type="button" class="btn btn-default searchbar-button">
+                            <button id="searchButton" type="button" class="btn btn-default searchbar-button disable-on-search-error">
                                 @Localizer.Translate("Search", "Dictionaries")
                             </button>
                         </div>
