Show remove group from project button for all users

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_CooperationListPage.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_CooperationListPage.cshtml
@@ -1,7 +1,5 @@
-﻿@using Ridics.Core.Structures.Shared
-@using Scalesoft.Localization.AspNetCore
+﻿@using Scalesoft.Localization.AspNetCore
 @using Vokabular.MainService.DataContracts.Contracts.Type
-@using Vokabular.Shared.AspNetCore.Extensions
 @model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<Vokabular.MainService.DataContracts.Contracts.Permission.UserGroupContract>
 @inject ILocalizationService Localizer
 
@@ -16,13 +14,10 @@
             <div class="description">@descriptionPrefix@role.Description</div>
             <div class="alert alert-danger"></div>
         </td>
-        @if (User.HasPermission(PermissionNames.ManageUserRoles))
-        {
-            <td class="buttons">
-                <a class="remove-role btn btn-sm btn-default">
-                    <i class="fa fa-trash"></i>
-                </a>
-            </td>
-        }
+        <td class="buttons">
+            <a class="remove-role btn btn-sm btn-default">
+                <i class="fa fa-trash"></i>
+            </a>
+        </td>
     </tr>
 }
