--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
@@ -330,12 +330,12 @@ html,body {
     color: @button-hover-background-color;
 }
 
-.fullscreen .fullscreen-button {
-    display: none;
-}
-
 .reader-text {
     height: auto;
+}
+
+.fullscreen-body {
+    overflow-y: hidden;
 }
 
 @fullscreenZIndex: 1035;
