Minor css fix in the textbank

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/itjakub.bohemiantextbank.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/itjakub.bohemiantextbank.less
@@ -160,6 +160,10 @@
     margin-top: 5px;
 }
 
+#currentPageContainer {
+    display: block;
+}
+
 #paginationContainer {
     text-align: center;
 }
