--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/ridics.bohemiantextbank-search-viewer-single.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/ridics.bohemiantextbank-search-viewer-single.less
@@ -80,6 +80,10 @@
     .corpus-search-settings-checkboxes {
         margin-bottom: 20px;
         margin-top: 10px;
+
+        .checkbox label input[type="checkbox"] {
+            margin: 1px 0 0 -18px;
+        }
     }
 
     .corpus-search-setting-div-results-count {
