--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/RolePermission.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/RolePermission.cshtml
@@ -130,6 +130,7 @@
                     </div>
                 </div>
                 <div class="panel-body">
+                    <a asp-controller="Permission" asp-action="ProjectPermission" class="btn-link btn btn-default">@Localizer.Translate("ProjectPermissionManagementHeadline", "Permission")</a>
                     <div id="permissionListContainer" class="list-container"></div>
                     <div id="permissionPagination" class="text-center"></div>
                 </div>
