--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/Widgets/_ProjectPermissionsPanel.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/Widgets/_ProjectPermissionsPanel.cshtml
@@ -1,4 +1,6 @@
-﻿@using Scalesoft.Localization.AspNetCore
+﻿@using ITJakub.Web.Hub.Constants
+@using ITJakub.Web.Hub.Helpers
+@using Scalesoft.Localization.AspNetCore
 @inject ILocalizationService Localizer
 
 <div class="section hide">
@@ -12,6 +14,11 @@
         </div>
         <div class="panel-body">
             <div class="alert-holder"></div>
+            @if (ViewData.TryGetBooleanValue(PermissionViewConstants.ShowLinkToGroupManagement))
+            {
+                <a asp-controller="Permission" asp-action="RolePermission" class="btn-link btn btn-default">@Localizer.Translate("GroupPermissionManagementHeadline", "Permission")</a>
+            }
+
             <div class="sub-content"></div>
             <button id="saveProjectPermissions" type="button" class="btn btn-default">@Localizer.Translate("Save", "Permission")</button>
         </div>
