--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
@@ -77,6 +77,10 @@
             margin-bottom: 0.5em;
             text-align: left;
         }
+        
+        .panel-body {
+            min-height: 510px;
+        }
 
         @media(max-width: 767px) {
             .panel-body {
@@ -88,6 +92,10 @@
             }
         }
     }
+
+    .btn-link {
+        margin-bottom: 1em;
+    }
 }
 
 #addProjectPermissionToRoleDialog .content,
@@ -96,6 +104,7 @@
          padding: 0.2em 0.8em;
      }
     
+    a,
     button {
         margin-left: 0.8em;
     }
