Remove underline from buttons in permission and group management

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
@@ -95,6 +95,10 @@
 
     .btn-link {
         margin-bottom: 1em;
+        
+        &:hover {
+            text-decoration: none;
+        }
     }
 }
 
