Minor audio player style improvement

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -452,7 +452,7 @@ button {
       position: relative;
       
       .current-progress {
-        background-color: darken(@audioPlayerBackgroundColor, 50%);
+        background-color: #8E5523;
         position: absolute;
         top: 0;
         left:0;
