Adjust styles for hyper-link to another permission management page

--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/Widgets/_ProjectPermissionsPanel.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/Widgets/_ProjectPermissionsPanel.cshtml
@@ -16,7 +16,9 @@
             <div class="alert-holder"></div>
             @if (ViewData.TryGetBooleanValue(PermissionViewConstants.ShowLinkToGroupManagement))
             {
-                <a asp-controller="Permission" asp-action="RolePermission" class="btn-link btn btn-default">@Localizer.Translate("GroupPermissionManagementHeadline", "Permission")</a>
+                <div class="header-link-container">
+                    <a asp-controller="Permission" asp-action="RolePermission"><i class="fa fa-external-link"></i> @Localizer.Translate("GroupPermissionManagementHeadline", "Permission")</a>
+                </div>
             }
 
             <div class="sub-content"></div>
