--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
@@ -93,12 +93,9 @@
         }
     }
 
-    .btn-link {
+    .header-link-container {
         margin-bottom: 1em;
-        
-        &:hover {
-            text-decoration: none;
-        }
+        text-align: center;
     }
 }
 
@@ -108,7 +105,6 @@
          padding: 0.2em 0.8em;
      }
     
-    a,
     button {
         margin-left: 0.8em;
     }
