--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/ridics.bohemiantextbank-search-viewer-combined.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/ridics.bohemiantextbank-search-viewer-combined.less
@@ -2,7 +2,7 @@
 @import "../../../css/ITJakub.Constants.less";
 @import "../../Admin/css/@editors-common-variables.less";
 
-@table-line-height: 3em;
+@table-line-height: 2em;
 @table-even-colour: #eee;
 @table-odd-colour: white;
 @table-row-clicked-color: #C0C0C0;
@@ -26,13 +26,14 @@
 
         .corpus-search-results-div {
             height: inherit;
-            border: 1px solid #ddd;
+            background-color: white;
 
             .search-results-row {
                 height: 100%;
 
                 .result-text-col {
                     height: 100%;
+                    overflow-y: scroll;
 
                     .text-results-table {
                         width: 100%;
