--- a/UJCSystem/ITJakub.Web.Hub/Views/Favorite/FavoriteManagement.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Favorite/FavoriteManagement.cshtml
@@ -61,7 +61,7 @@
         <div class="col-md-9">
             <div class="row">
                 <div class="col-md-5">
-                    <span class="favorite-management-heading">@Localizer.Translate("NoLabelCorrespondsFilter","Favorite", LocTranslationSource.File)</span>
+                    <span class="favorite-management-heading">@Localizer.Translate("FavoriteItems","Favorite", LocTranslationSource.File)</span>
                 </div>
                 <div class="col-md-2">
                     <label for="sort-select">@Localizer.Translate("SortBy", "Favorite", LocTranslationSource.File)</label>
