--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1254,13 +1254,17 @@ table {
                         .respond-to-comment-textarea {
                             margin-top: 5px;
                         }
+
+                        .alert {
+                            margin-top: 1em;
+                        }
                     }
 
                     .composition-area {
                         &-loading {
                             position: absolute;
-                            top: 25%;
-                            left: 40%;
+                            top: 30%;
+                            left: 45%;
                         }
 
                         .editor {
@@ -1288,6 +1292,10 @@ table {
                             font-family: @serif-font-family-reader;
                             text-align: justify;
                             font-size: 115%;
+                        }
+                        
+                        .alert {
+                            margin-top: 1em;
                         }
                     }
                 }
