Textbank search - add alert with text "No results"

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/itjakub.bohemiantextbank.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/itjakub.bohemiantextbank.less
@@ -39,6 +39,11 @@
     height: @search-results-area-height;
     overflow-x: scroll;
     overflow-y: auto;
+    
+    .alert {
+        width: 90%;
+        margin-top: 1em; 
+    }
 }
 
 .corpus-search-setting-div {
