--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.PluginMenu.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.PluginMenu.less
@@ -1,4 +1,5 @@
 ﻿@import "ITJakub.Colors.less";
+@import "ITJakub.Constants.less";
 @import "ITJakub.Images.less";
 
 #main-plugins-menu span,
@@ -15,7 +16,7 @@
     height: 40px;
     display: table-cell;
 
-    @media screen and (max-width: 1570px) {
+    @media screen and (max-width: @extra-large-screen) {
         height: auto;
     }
 }
@@ -41,7 +42,7 @@
     float: left;
     margin-left: 1rem;
 
-    @media screen and (max-width: 1570px) {
+    @media screen and (max-width: @extra-large-screen) {
         margin-left: 0;
     }
 }
@@ -103,7 +104,7 @@
     vertical-align: middle;
     padding: 1.2rem .5rem;
 
-    @media screen and (max-width: 1570px) {
+    @media screen and (max-width: @extra-large-screen) {
         padding: 1.5rem .6rem;
     }
 }
