Fix showing loading spinners in a text editor

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1265,6 +1265,7 @@ table {
                             position: absolute;
                             top: 30%;
                             left: 45%;
+                            z-index: 2;
                         }
 
                         .editor {
