--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/itjakub.bohemiantextbank.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/itjakub.bohemiantextbank.less
@@ -39,10 +39,11 @@
     height: @search-results-area-height;
     overflow-x: scroll;
     overflow-y: auto;
-    
-    .alert {
-        width: 90%;
-        margin-top: 1em; 
+
+    .no-results-info {
+        font-size: 18px;
+        text-align: center;
+        margin-top: 2em;
     }
 }
 
