Used pagination component for mobile reader

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -530,6 +530,12 @@ button {
     }
   }
 
+  @media screen and (max-width: @mobile-max-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
   &:after {
     content: '';
     display: block;
