aligned control buttons and timer in audio player on mobile device

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -464,7 +464,8 @@ button {
       padding: 0 1em;
       width: 100%;
       flex-wrap: wrap-reverse;
-      
+      justify-content: space-between;
+
       .full-progressbar {
         width: calc(100% + 2em);
         margin: 0 -1em;
