--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -29,7 +29,7 @@
     </div>
     
     <div class="content-images col-xs-12 col-sm-7 col-md-8 col-lg-9">
-        <div class="panel panel-default">
+        <div class="panel panel-default" style="min-height: 400px;">
             <div class="panel-heading">
                 <div class="panel-title">
                     <div class="row">
