--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -1,7 +1,7 @@
 ﻿@import "../../../css/ITJakub.Colors.less";
 
 #ReaderBodyDiv {
-  min-height: 550px;
+  height: 550px;
   @media screen and (max-width: @mobile-max-width) {
     margin: 0 15px;
   }
