--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/_EditRole.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/_EditRole.cshtml
@@ -39,6 +39,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "Permission", LocTranslationSource.File)</button>
-        <input type="submit" class="btn btn-default" value="@Localizer.Translate("Save")" />
+        <button type="button" class="btn btn-default save-button"><span class="saving-icon loading-small-button"></span>@Localizer.Translate("Save")</button>
     </div>
 </form>
