added margin for view buttons

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -511,7 +511,8 @@ button {
   float: right;
   min-width: 310px;
   text-align: right;
-
+  margin-top: 0.7rem;
+  
   .buttons {
     float: none;
     text-align: right;
