--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -7,7 +7,7 @@
     @await Html.PartialAsync("Resource/SubView/_PageNavigation")
     
     <div class="pages col-xs-12 col-sm-5 col-md-4 col-lg-3">
-        <div class="panel panel-default pages">
+        <div class="panel panel-default pages" style="min-height: 400px;">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-4">
