--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_ChapterRow.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_ChapterRow.cshtml
@@ -23,18 +23,7 @@
         </div>
         <div class="buttons">
             <span class="page-name">[@Model.Chapter.BeginningPageName]</span>
-            <select name="chapter-page" class="form-control select-page selectpicker hide" value="@Model.Chapter.BeginningPageName">
-                @foreach (var pageItem in Model.Pages)
-                {
-                    if (pageItem.Id == Model.Chapter.BeginningPageId)
-                    {
-                        <option value="@pageItem.Id" selected="selected">@pageItem.Name</option>
-                    }
-                    else
-                    {
-                        <option value="@pageItem.Id" >@pageItem.Name</option>
-                    }
-                }
+            <select name="chapter-page" class="form-control select-page selectpicker hide" value="@Model.Chapter.BeginningPageName" data-inited="false">
             </select>
             <a class="edit-chapter btn btn-sm btn-default" title="@Localizer.Translate("EditChapter", "RidicsProject")">
                 <i class="fa fa-pencil"></i>
@@ -54,7 +43,6 @@
             {
                 @await Html.PartialAsync("Work/SubView/_ChapterRow", new ChapterEditorRowViewModel{
                     Chapter = chapter,
-                    Pages = Model.Pages,
                     LevelOfHierarchy = Model.LevelOfHierarchy + 1
                 }, ViewData)
             }
