--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/Widgets/_AddProjectPermissionsDialog.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/Widgets/_AddProjectPermissionsDialog.cshtml
@@ -33,7 +33,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "Permission", LocTranslationSource.File)</button>
-                <button type="button" class="btn btn-default" id="addPermission" data-init="false">@Localizer.Translate("AddPermissionToGroup", "Permission", LocTranslationSource.File)</button>
+                <button type="button" class="btn btn-default" id="addPermission" data-init="false">
+                    <span class="saving-icon loading-small-button hide"></span>
+                    @Localizer.Translate("AddPermissionToGroup", "Permission", LocTranslationSource.File)
+                </button>
             </div>
         </div>
     </div>
