--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUserRoles.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUserRoles.cshtml
@@ -136,7 +136,10 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "Permission", LocTranslationSource.File)</button>
-                        <button type="button" class="btn btn-default" id="add-user-to-group">@Localizer.Translate("AddUserToGroup", "Permission", LocTranslationSource.File)</button>
+                        <button type="button" class="btn btn-default" id="add-user-to-group">
+                            <span class="saving-icon loading-small-button hide"></span>
+                            @Localizer.Translate("AddUserToGroup", "Permission", LocTranslationSource.File)
+                        </button>
                     </div>
                 </div>
             </div>
