Improve style for vertical splitter in project editor

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -122,12 +122,13 @@
             padding: 10px 2px;
             margin-right: 3px;
             transform: scaleY(2);
-            margin-top: 30vh;
+            margin-top: 250px;
         }
     }
 
     .vertical-splitter {
         border: 1px solid #ccc;
+        min-height: 500px;
     }
 
     .content {
