--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/ProjectPermission.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/ProjectPermission.cshtml
@@ -93,6 +93,7 @@
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-permission-section" id="project-permission-section">
         @{
             ViewData.Add(PermissionViewConstants.ShowLinkToGroupManagement, true);
+            ViewData.Add(PermissionViewConstants.SaveProjectPermissionsEnabled, true);
         }
         @await Html.PartialAsync("Widgets/_ProjectPermissionsPanel", ViewData)
     </div>
