--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/Widgets/_ProjectPermissionsPanel.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/Widgets/_ProjectPermissionsPanel.cshtml
@@ -22,7 +22,9 @@
             }
 
             <div class="sub-content"></div>
-            <button id="saveProjectPermissions" type="button" class="btn btn-default">@Localizer.Translate("Save", "Permission")</button>
+            <button id="saveProjectPermissions" type="button" class="btn btn-default" disabled="@(!ViewData.TryGetBooleanValue(PermissionViewConstants.SaveProjectPermissionsEnabled))">
+                @Localizer.Translate("Save", "Permission")
+            </button>
         </div>
     </div>
 </div>
