--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1977,3 +1977,7 @@ table {
         }
     }
 }
+// adjusts height of select to be same height as textarea
+.adjust_select_height {
+    height: 34px;
+}
