Fixed terms search

--- a/UJCSystem/ITJakub.Web.Hub/Areas/BookReader/Views/BookReader/Listing.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/BookReader/Views/BookReader/Listing.cshtml
@@ -36,7 +36,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        initGoldenReader(@Json.Serialize(Model.BookId), @Json.Serialize(Model.SnapshotId), @Json.Serialize(Model.BookTitle), @Json.Serialize(Model.BookPages), @Json.Serialize(Model.SearchText, Model.JsonSerializerSettingsForBiblModule), @Json.Serialize(Model.InitPageId));
+        initGoldenReader(@Json.Serialize(Model.BookId), @Json.Serialize(Model.SnapshotId), @Json.Serialize(Model.BookTitle), @Json.Serialize(Model.BookPages), @Json.Serialize(Model.SearchType), @Json.Serialize(Model.SearchText, Model.JsonSerializerSettingsForBiblModule), @Json.Serialize(Model.InitPageId));
     });
 </script>
 
